@@ -1,3 +1,14 @@
+2009-06-16  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation\TypeValueReference.cs: Only show
+	  static members as children of types.
+
+	* Mono.Debugging.Evaluation\NRefactoryEvaluator.cs: Don't
+	  crash if a method evaluation returns 'void'.
+
+	* Mono.Debugging.Evaluation\LiteralValueReference.cs: Properly
+	  support literal expressions.
+
 2009-06-15  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
